webpack,包管理器学习

--- a/webpack-loaders/style-img/index.html
+++ b/webpack-loaders/style-img/index.html
@@ -7,6 +7,6 @@
 <body>
 <div>Hello,world</div>
 <img src="./demo.png" alt="">
-<script src="../dist/styles.bundle.js"></script>
+<script src="../dist/styleImg.bundle.js"></script>
 </body>
 </html>
