--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 <body>
 <div>Hello,world</div>
 <img src="./demo.png" alt="">
+<!--<script src="./index.js"></script>-->
 <script src="../dist/styles.bundle.js"></script>
 </body>
 </html>
